<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Math Quiz Project</string>
    <string name="question1_answer1">6812</string>
    <string name="question1_answer2">6912</string>
    <string name="question1_answer3">6902</string>
    <string name="question1_answer4">6802</string>
    <string name="question1Header">Question #1:</string>
    <string name="question2Header">Question #2:</string>
    <string name="question3Header">Question #3:</string>
    <string name="question4Header">Question #4:</string>
    <string name="question1">2345 + 4567 = __________</string>
    <string name="question2">Which of these shapes are hexagons?</string>
    <string name="question3">What is 543 - 345?</string>
    <string name="question4">12 x 8 = ____________</string>
    <string name="question4_answer1">86</string>
    <string name="question4_answer2">128</string>
    <string name="question4_answer3">96</string>
    <string name="question4_answer4">20</string>
    <string name="toast">You have <xliff:g id="rightAnswers" example="1">%d</xliff:g> out of <xliff:g id="totalQuestions" example="4">%d</xliff:g> questions correct.</string>
    <string name="get_score">Get Score</string>
    <string name="shape_6">Shape 6</string>
    <string name="shape_5">Shape 5</string>
    <string name="shape_4">Shape 4</string>
    <string name="shape_3">Shape 3</string>
    <string name="shape_2">Shape 2</string>
    <string name="shape_1">Shape 1</string>
    <string name="main_title">Welcome to \n 3rd Grade Math Quiz</string>
</resources>
